# rust-explorer

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
crash_reports/: crash_report_20250626_044901.json  crash_report_20250626_044928.json
crates/config/: Cargo.toml
crates/config/src/: lib.rs  mod.rs  settings.rs  state_persistence.rs
crates/config/src/tests/: mod.rs  state_persistence_tests.rs
crates/core/: Cargo.toml
crates/core/src/: event.rs  file_sorting.rs  filesystem.rs  lib.rs  mod.rs  state.rs  system_integration.rs
crates/core/src/tests/: filesystem_tests.rs  mod.rs  state_tests.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  layout.rs  lib.rs  mod.rs  state_integration.rs  theme.rs  window.rs
crates/ui/src/components/: breadcrumb.rs  error_dialog.rs  file_item.rs  file_list.rs  file_navigation.rs  header.rs  main_content.rs  mod.rs  modern_file_item.rs  modern_header.rs  modern_sidebar.rs  sort_filter.rs  status_bar.rs
crates/ui/tests/: layout_tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  lib.rs  logging.rs  mod.rs  panic_handler.rs
src/: lib.rs  main.rs
