[package]
name = "rust-explorer-config"
version = "0.1.0"
edition = "2024"
description = "Configuration management for rust-explorer"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-explorer-utils = { path = "../utils" }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"