[package]
name = "rust-explorer-core"
version = "0.1.0"
edition = "2024"
description = "Core functionality for rust-explorer"

[dependencies]
rust-explorer-utils = { path = "../utils" }
tokio = { version = "1", features = ["fs", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
serde_json = "1.0"